<resources>
    <string name="app_name">RoomWordSample</string>
    <string name="action_settings">Settings</string>
    <string name="hint_word">Word…</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="add_word">Add word</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="delete_icon">Delete Icon</string>
    <string name="light_theme">Light theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="system_default">System</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system">Default</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="switch_title">Switch</string>
    <string name="go_api">Go Api</string>
    <string name="article_image">Article Image</string>
    <string name="type_rent">Rent</string>
    <string name="type_sale">Sale</string>
    <string name="display_type">For %s</string>
    <string name="display_price_monthly_rental">$%,.0f/month</string>
    <string name="display_price">$%,.0f</string>


    <string name="content">content</string>
    <string name="description">description</string>
    <string name="author">author</string>
    <string name="url">url</string>
    <string name="urlToImage">urlToImage</string>
    <string name="title">title</string>
    <string name="publishedAt">publishedAt</string>
    <string name="bookmarkAdded">Added to Bookmarks</string>
    <string name="bookmarkRemoved">Removed from Bookmarks</string>
    <string name="share">Share</string>
    <string name="default_time_format">yyyy-MM-dd\'T\'HH:mm:ss\'Z\'</string>
    <string name="date_format">MMM d, yyyy</string>
    <string name="time_format">HH:mm a</string>
    <string name="text_login_mobile">We will send you an <b>One Time Password</b>\non this mobile number</string>
    <string name="login_otp_text">Enter the OTP sent to <b>+91-8604609572</b></string>
    <string name="verify_proceed"><![CDATA[VERIFY & PROCEED]]></string>
    <string name="news">News</string>
    <string name="jan_01_2020_01_00_am">Jan 01, 2020 | 01:00 am</string>
    <string name="oops">Oops!</string>
    <string name="please_check_your_internet_connection">Please check your Internet Connection</string>
    <string name="try_again">Try Again</string>
    <string name="outer_border">Outer border</string>
    <string name="no_items_available">No items available</string>
    <string name="picture_describing_the_news">Picture describing the news</string>
    <string name="image_news">Image news</string>
    <string name="background_image_for_news">Background image for news</string>
    <string name="background_image_for_news_date">Background image for news date</string>

</resources>