<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="4dp"
        android:elevation="15dp"
        android:orientation="vertical"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <androidx.cardview.widget.CardView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginEnd="5dp"
                android:backgroundTint="@android:color/white"
                android:elevation="20dp"
                android:padding="0.2dp"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:id="@+id/image_top_headlines"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/image_news"
                    android:src="@drawable/zen_rocks" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginStart="6dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="22dp"
                    android:background="@color/primaryColor"
                    android:contentDescription="@string/background_image_for_news" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="16dp" />

                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="18dp"
                    android:background="@color/primaryColor"
                    android:contentDescription="@string/background_image_for_news_date" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>