<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="news"
            type="com.example.android.roomwordsample.network.apiNews.models.NewsHeadlines" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="4dp"
        android:backgroundTint="@android:color/holo_purple"
        android:elevation="15dp"
        android:orientation="vertical"
        android:transitionName="@{@string/news_card_transition_name(news.id)}">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="5dp">


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/image_top_headlines"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/article_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/zen_rocks"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintCircleRadius="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </com.google.android.material.card.MaterialCardView>


            <TextView
                android:id="@+id/title_top_headlines"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:lines="3"
                android:text="@string/news"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/arrow_news"
                app:layout_constraintStart_toEndOf="@+id/materialCardView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/date_top_headlines"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:lines="1"
                android:text="@string/jan_01_2020_01_00_am"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/title_top_headlines" />

            <ImageView
                android:id="@+id/arrow_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/this_image_means_you_can_open_up_this_article"
                android:src="@drawable/ic_baseline_arrow_right_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>
